--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/codecoffee
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://b51ae26547b055:3d812aa9@us-cdbr-east-03.cleardb.com/heroku_eacf8f397c37751?reconnect=true
+spring.datasource.username=b51ae26547b055
+spring.datasource.password=3d812aa9
