--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 #spring.datasource.username=b51ae26547b055
 #spring.datasource.password=3d812aa9
 
-spring.datasource.url=jdbc:mysql://localhost:3306/codecoffee
+spring.datasource.url=jdbc:mysql://localhost:3306/hope_project
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=thanhcongnhe9999
