change pom.xml, open deploy API

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.nobita</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com</groupId>
+    <artifactId>code-coffee</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
-    <description>Demo project for Spring Boot</description>
+    <name>code-coffee</name>
+    <description>code-coffee - Coffee Management System</description>
     <properties>
         <java.version>11</java.version>
     </properties>
